Modificações para a página Entrar
A droga do botão Entrar não tá redirecionando

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ main {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    margin-top: 100px;
 }
 
 /* Estilos para cabeçalhos (h1), incluindo tamanho de fonte e margem inferior. */
@@ -137,7 +138,7 @@ button {
 }
 
 /* Estilizar o botão quando passar o mouse sobre ele */
-#cadastrarClienteBtn:hover, #excluirClientesBtn:hover, #editarClienteBtn:hover, #salvarBtn:hover, #submit:hover {
+#cadastrarClienteBtn:hover, #excluirClientesBtn:hover, #editarClienteBtn:hover, #salvarBtn:hover, #submit:hover, #entrarBtn:hover {
     background-color: #B6322A; /* Altere a cor quando o mouse estiver sobre o botão */
 }
 
@@ -165,3 +166,28 @@ h1 {
     font-size: 24px;
     margin-bottom: 20px;
 }
+
+/* Style for the full-width image */
+.full-width-image {
+    width: 100%;
+    height: auto;
+}
+
+/* Add margin to create space between the footer and content */
+.content {
+    margin-bottom: 50px; /* Adjust the value to control the amount of space */
+}
+
+.login-page {
+    max-width: 600px; /* Defina a largura máxima desejada */
+    margin: 0 auto; /* Centraliza horizontalmente */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
+
