--- a/style.css
+++ b/style.css
@@ -22,14 +22,26 @@ body {
 }
 
 /* Estilos para a barra de navegação (nav), incluindo cor de fundo, sombra, borda arredondada, fonte e alinhamento. */
-nav {
-    background-color: whitesmoke;
-    padding: 15px;
-    box-shadow: 10px 10px 10px rgb(145, 17, 17);
-    border-radius: 15px;
-    font-weight: bold;
-    text-align: right;
-    margin: 0 15px;
+nav{
+    padding: 0px;
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(83,0,0,1) 50%, rgba(255,0,0,1) 100%);
+    height: 50px;
+}
+.logo{
+    padding-top: 10px;
+    padding-bottom: 2px;
+    padding-left: 670px;
+    height: 45px;
+}
+.navbar {
+    font-family: 'Open Sans', sans-serif;
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(83,0,0,1) 50%, rgba(255,0,0,1) 100%);
+    padding-top: 12px;
+    
+    text-align: center;
+    
 }
 
 /* Estilos para links na barra de navegação, incluindo cor do texto, remoção de sublinhado e margem à direita. */
